update home message + leaderboard wrapping fix

--- a/src/app/components/Pages/Leaderboard/leaderboard.scss
+++ b/src/app/components/Pages/Leaderboard/leaderboard.scss
@@ -110,6 +110,7 @@
         font-size: $font-smaller;
         line-height: $font-bigger;
         vertical-align: text-bottom;
+        white-space: pre;
 
         &.is-up{ color: $success; }
         &.is-down{ color: $danger; }
